feat: ajoute un graphe visuel

--- a/index.html
+++ b/index.html
@@ -67,129 +67,131 @@
           <div
             role="region"
             aria-labelledby="clamp-app-title">
-            <table
-              id="clamp-table"
-              class="table"
-              aria-describedby="clamp-desc">
-              <caption class="visually-hidden">
-                Liste des variables à générer
-              </caption>
-              <thead>
-                <tr>
-                  <th scope="col">variable</th>
-                  <th scope="col">min&nbsp;(px)</th>
-                  <th scope="col">Aperçu</th>
-                  <th scope="col">max&nbsp;(px)</th>
-                  <th scope="col">
-                    <span class="visually-hidden">actions</span>
-                  </th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>
-                    <input
-                      type="text"
-                      class="input-slug"
-                      value="text-s"
-                      aria-label="slug" />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-min"
-                      value="14"
-                      aria-label="min en pixels" />
-                  </td>
-                  <td>
-                    <div class="graph-visual"></div>
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-max"
-                      value="14"
-                      aria-label="max en pixels" />
-                  </td>
-                  <td>
-                    <button
-                      type="button"
-                      class="btn-remove"
-                      aria-label="Supprimer la ligne">
-                      ✕
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <input
-                      type="text"
-                      class="input-slug"
-                      value="text-m"
-                      aria-label="slug" />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-min"
-                      value="16"
-                      aria-label="min en pixels" />
-                  </td>
-                  <td>
-                    <div class="graph-visual"></div>
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-max"
-                      value="18"
-                      aria-label="max en pixels" />
-                  </td>
-                  <td>
-                    <button
-                      type="button"
-                      class="btn-remove"
-                      aria-label="Supprimer la ligne">
-                      ✕
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <input
-                      type="text"
-                      class="input-slug"
-                      value="text-l"
-                      aria-label="slug" />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-min"
-                      value="18"
-                      aria-label="min en pixels" />
-                  </td>
-                  <td>
-                    <div class="graph-visual"></div>
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-max"
-                      value="20"
-                      aria-label="max en pixels" />
-                  </td>
-                  <td>
-                    <button
-                      type="button"
-                      class="btn-remove"
-                      aria-label="Supprimer la ligne">
-                      ✕
-                    </button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="table-responsive">
+              <table
+                id="clamp-table"
+                class="table"
+                aria-describedby="clamp-desc">
+                <caption class="visually-hidden">
+                  Liste des variables à générer
+                </caption>
+                <thead>
+                  <tr>
+                    <th scope="col">variable</th>
+                    <th scope="col">min&nbsp;(px)</th>
+                    <th scope="col">Aperçu</th>
+                    <th scope="col">max&nbsp;(px)</th>
+                    <th scope="col">
+                      <span class="visually-hidden">actions</span>
+                    </th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <input
+                        type="text"
+                        class="input-slug"
+                        value="text-s"
+                        aria-label="slug" />
+                    </td>
+                    <td>
+                      <input
+                        type="number"
+                        class="input-min"
+                        value="14"
+                        aria-label="min en pixels" />
+                    </td>
+                    <td>
+                      <div class="graph-visual"></div>
+                    </td>
+                    <td>
+                      <input
+                        type="number"
+                        class="input-max"
+                        value="14"
+                        aria-label="max en pixels" />
+                    </td>
+                    <td>
+                      <button
+                        type="button"
+                        class="btn-remove"
+                        aria-label="Supprimer la ligne">
+                        ✕
+                      </button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <input
+                        type="text"
+                        class="input-slug"
+                        value="text-m"
+                        aria-label="slug" />
+                    </td>
+                    <td>
+                      <input
+                        type="number"
+                        class="input-min"
+                        value="16"
+                        aria-label="min en pixels" />
+                    </td>
+                    <td>
+                      <div class="graph-visual"></div>
+                    </td>
+                    <td>
+                      <input
+                        type="number"
+                        class="input-max"
+                        value="18"
+                        aria-label="max en pixels" />
+                    </td>
+                    <td>
+                      <button
+                        type="button"
+                        class="btn-remove"
+                        aria-label="Supprimer la ligne">
+                        ✕
+                      </button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <input
+                        type="text"
+                        class="input-slug"
+                        value="text-l"
+                        aria-label="slug" />
+                    </td>
+                    <td>
+                      <input
+                        type="number"
+                        class="input-min"
+                        value="18"
+                        aria-label="min en pixels" />
+                    </td>
+                    <td>
+                      <div class="graph-visual"></div>
+                    </td>
+                    <td>
+                      <input
+                        type="number"
+                        class="input-max"
+                        value="20"
+                        aria-label="max en pixels" />
+                    </td>
+                    <td>
+                      <button
+                        type="button"
+                        class="btn-remove"
+                        aria-label="Supprimer la ligne">
+                        ✕
+                      </button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
 
             <div
               data-layout="cluster"
@@ -201,8 +203,6 @@
                 Ajouter une ligne
               </button>
             </div>
-
-            <!-- theme and tokens outputs moved to a dedicated duo section below -->
 
             <div
               id="clamp-status"
@@ -230,129 +230,131 @@
           <div
             role="region"
             aria-labelledby="spacing-app-title">
-            <table
-              id="spacing-table"
-              class="table"
-              aria-describedby="spacing-desc">
-              <caption class="visually-hidden">
-                Liste des espacements à générer
-              </caption>
-              <thead>
-                <tr>
-                  <th scope="col">variable</th>
-                  <th scope="col">min&nbsp;(px)</th>
-                  <th scope="col">Aperçu</th>
-                  <th scope="col">max&nbsp;(px)</th>
-                  <th scope="col">
-                    <span class="visually-hidden">actions</span>
-                  </th>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>
-                    <input
-                      type="text"
-                      class="input-slug"
-                      value="spacing-xs"
-                      aria-label="slug" />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-min"
-                      value="4"
-                      aria-label="min en pixels" />
-                  </td>
-                  <td>
-                    <div class="graph-visual"></div>
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-max"
-                      value="4"
-                      aria-label="max en pixels" />
-                  </td>
-                  <td>
-                    <button
-                      type="button"
-                      class="btn-remove"
-                      aria-label="Supprimer la ligne">
-                      ✕
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <input
-                      type="text"
-                      class="input-slug"
-                      value="spacing-s"
-                      aria-label="slug" />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-min"
-                      value="8"
-                      aria-label="min en pixels" />
-                  </td>
-                  <td>
-                    <div class="graph-visual"></div>
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-max"
-                      value="16"
-                      aria-label="max en pixels" />
-                  </td>
-                  <td>
-                    <button
-                      type="button"
-                      class="btn-remove"
-                      aria-label="Supprimer la ligne">
-                      ✕
-                    </button>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <input
-                      type="text"
-                      class="input-slug"
-                      value="spacing-m"
-                      aria-label="slug" />
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-min"
-                      value="16"
-                      aria-label="min en pixels" />
-                  </td>
-                  <td>
-                    <div class="graph-visual"></div>
-                  </td>
-                  <td>
-                    <input
-                      type="number"
-                      class="input-max"
-                      value="32"
-                      aria-label="max en pixels" />
-                  </td>
-                  <td>
-                    <button
-                      type="button"
-                      class="btn-remove"
-                      aria-label="Supprimer la ligne">
-                      ✕
-                    </button>
-                  </td>
-                </tr>
-              </tbody>
-            </table>
+            <div class="table-responsive">
+              <table
+                id="spacing-table"
+                class="table"
+                aria-describedby="spacing-desc">
+                <caption class="visually-hidden">
+                  Liste des espacements à générer
+                </caption>
+                <thead>
+                  <tr>
+                    <th scope="col">variable</th>
+                    <th scope="col">min&nbsp;(px)</th>
+                    <th scope="col">Aperçu</th>
+                    <th scope="col">max&nbsp;(px)</th>
+                    <th scope="col">
+                      <span class="visually-hidden">actions</span>
+                    </th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <input
+                        type="text"
+                        class="input-slug"
+                        value="spacing-xs"
+                        aria-label="slug" />
+                    </td>
+                    <td>
+                      <input
+                        type="number"
+                        class="input-min"
+                        value="4"
+                        aria-label="min en pixels" />
+                    </td>
+                    <td>
+                      <div class="graph-visual"></div>
+                    </td>
+                    <td>
+                      <input
+                        type="number"
+                        class="input-max"
+                        value="4"
+                        aria-label="max en pixels" />
+                    </td>
+                    <td>
+                      <button
+                        type="button"
+                        class="btn-remove"
+                        aria-label="Supprimer la ligne">
+                        ✕
+                      </button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <input
+                        type="text"
+                        class="input-slug"
+                        value="spacing-s"
+                        aria-label="slug" />
+                    </td>
+                    <td>
+                      <input
+                        type="number"
+                        class="input-min"
+                        value="8"
+                        aria-label="min en pixels" />
+                    </td>
+                    <td>
+                      <div class="graph-visual"></div>
+                    </td>
+                    <td>
+                      <input
+                        type="number"
+                        class="input-max"
+                        value="16"
+                        aria-label="max en pixels" />
+                    </td>
+                    <td>
+                      <button
+                        type="button"
+                        class="btn-remove"
+                        aria-label="Supprimer la ligne">
+                        ✕
+                      </button>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                      <input
+                        type="text"
+                        class="input-slug"
+                        value="spacing-m"
+                        aria-label="slug" />
+                    </td>
+                    <td>
+                      <input
+                        type="number"
+                        class="input-min"
+                        value="16"
+                        aria-label="min en pixels" />
+                    </td>
+                    <td>
+                      <div class="graph-visual"></div>
+                    </td>
+                    <td>
+                      <input
+                        type="number"
+                        class="input-max"
+                        value="32"
+                        aria-label="max en pixels" />
+                    </td>
+                    <td>
+                      <button
+                        type="button"
+                        class="btn-remove"
+                        aria-label="Supprimer la ligne">
+                        ✕
+                      </button>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
 
             <div
               data-layout="cluster"
