--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0" />
+      content="width=device-width, initial-scale=1, shrink-to-fit=no, viewport-fit=cover" />
     <title>Elastic, générateur d'espacements fluides</title>
     <link
       rel="preload"
