--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       as="font"
       type="font/woff2"
       crossorigin="anonymous" />
-
+    <link
+      rel="icon"
+      type="image/png"
+      href="img/favicon-96x96.png"
+      sizes="96x96" />
     <link
       rel="icon"
       type="image/svg+xml"
